k3s/nginx-middleware.yaml
# Strip prefix /foobar and /fiibar
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /nginx
